--- a/jobApp.html
+++ b/jobApp.html
@@ -59,7 +59,7 @@
   </fieldset>
   </section>
   <header class="main">
-  <input type="button" value="submit">
+  <input  id = "button" type="button" value="submit">
   </header>
   
 </body>
