--- a/myProfolio.html
+++ b/myProfolio.html
@@ -23,9 +23,21 @@
   <div class="div">
     <h1 class="heading">LATEST BLOG POSTS </h1>
     <h3>My Journey with Full Stack Development</h3>
-    I currently made a website with the help of <b>HTML CSS JAVASCIPT</b>.I also made the social media website with the help of <b>REACT and VITE</b> in frontend .
+    I currently made a website with the help of <b>HTML CSS JAVASCIPT</b>.I also made the social media website with the help of <b>REACT and VITE</b> in frontend . I also learn about <b>FIGMA</b> with the help of figma ,I have made some UI designs.I am currently learning about backend with <B>NODE.JS .</B>
   </div>
+  <div class="div">
+    <h1 class="heading">LANGUAGES I KNOW</h1>
+    <ul>
+      <li>C</li>
+      <li>PYTHON</li>
+      <li>JAVA</li>
+      <li>SQL</li>
+      <li>HTML , CSS , JAVASCIPT</li>
+      
 
+    </ul>
+  </div>
+  
 
    
   
