--- a/chess.html
+++ b/chess.html
@@ -15,7 +15,7 @@
       grid-template-columns: repeat(8,1fr);
     }
     #black{
-      background-color: black;
+      background-color: rgb(0, 0, 0);
     }
   </style>
 </head>
